syntax = "proto3";
package mantrachain.txfees.v1;

option go_package = "github.com/MANTRA-Finance/mantrachain/x/txfees/types";

// FeeToken
message FeeToken {
  string denom = 1;
  uint64 pair_id = 2;
}
